redmine/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: redmine-app
spec:
  selector:
    app: redmine-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
  type: NodePort
