redmine/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deployment-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - www.terraform.ml
    secretName: www-terraform-ml-tls
  rules:
   - host: www.terraform.ml
     http:
       paths:
       - path: /
         backend:
           serviceName: redmine-app
           servicePort: 80
